# snake_game_cpp

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  constants.h
lib/apple/: CMakeLists.txt  apple.cpp  apple.h
lib/game/: CMakeLists.txt  game.cpp  game.h
lib/snake/: CMakeLists.txt  snake.cpp  snake.h
